<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/name" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" />


    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:orientation="horizontal"
        android:layout_below="@+id/name"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/name"
        android:layout_alignEnd="@+id/name">

        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/weight1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45dp"
            android:text="@string/weight1" />

        <TextView
            android:id="@+id/height1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:orientation="horizontal"
        android:layout_below="@+id/texts"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/name"
        android:layout_alignEnd="@+id/name">

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:ems="2"
            android:inputType="number" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="17dp"
            android:ems="4"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn-report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputs"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/report"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:onClick="gerarRelatorio"/>


</RelativeLayout>